ssl now required

--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -39,14 +39,14 @@ unix_socket_permissions = 0777
 #krb_caseins_users = off
 
 # - SSL -
-#ssl = off
-#ssl_ca_file = ''
-#ssl_cert_file = 'server.crt'
-#ssl_crl_file = ''
+ssl = on
+ssl_ca_file = 'root.crt'
+ssl_cert_file = 'server.crt'
+ssl_crl_file = ''
 #ssl_crl_dir = ''
-#ssl_key_file = 'server.key'
-#ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
-#ssl_prefer_server_ciphers = on
+ssl_key_file = 'server.key'
+ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
+ssl_prefer_server_ciphers = on
 #ssl_ecdh_curve = 'prime256v1'
 #ssl_min_protocol_version = 'TLSv1.2'
 #ssl_max_protocol_version = ''
