--- a/templates/pg_hba.conf.j2
+++ b/templates/pg_hba.conf.j2
@@ -2,3 +2,4 @@
 local   all             all                                     peer
 host    all             all             127.0.0.1/32            ident
 host    all             all             ::1/128                 ident
+hostssl all             all             0.0.0.0/0               md5
